export const snapshot = {};

snapshot[`Issue List Command - Help Text 1`] = `
stdout:
\`
Usage: list

Description:

  List your issues

Options:

  -h, --help                        - Show this help.                                                                                                 
  -s, --state          <state>      - Filter by issue state (comma-separated or repeated, e.g. --state triage,started)  (Default: [ \\x1b[32m"unstarted"\\x1b[39m ])    
  --all-states                      - Show issues from all states                                                                                     
  --assignee           <assignee>   - Filter by assignee (username)                                                                                   
  -A, --all-assignees               - Show issues for all assignees                                                                                   
  -U, --unassigned                  - Show only unassigned issues                                                                                     
  --sort               <sort>       - Sort order (can also be set via LINEAR_ISSUE_SORT)                                (Values: \\x1b[32m"manual"\\x1b[39m, \\x1b[32m"priority"\\x1b[39m)
  --team               <team>       - Team to list issues for (if not your default team)                                                              
  --project            <project>    - Filter by project name                                                                                          
  --cycle              <cycle>      - Filter by cycle name, number, or 'active'                                                                       
  --milestone          <milestone>  - Filter by project milestone name (requires --project)                                                           
  --limit              <limit>      - Maximum number of issues to fetch (default: 50, use 0 for unlimited)              (Default: \\x1b[33m50\\x1b[39m)                 
  -w, --web                         - Open in web browser                                                                                             
  -a, --app                         - Open in Linear.app                                                                                              
  --no-pager                        - Disable automatic paging for long output                                                                        

\`
stderr:
""
`;

snapshot[`Issue List Command - Invalid Comma-Separated State 1`] = `
stdout:
""
stderr:
'✗ Failed to list issues: Invalid state: "invalid". Valid states are: triage, backlog, unstarted, started, completed, canceled
'
`;

snapshot[`Issue List Command - Invalid State 1`] = `
stdout:
""
stderr:
'✗ Failed to list issues: Invalid state: "bogus". Valid states are: triage, backlog, unstarted, started, completed, canceled
'
`;
